<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:weightSum="100">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="25">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        android:background="@color/azul"/>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="90">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_1"
                    android:textColor="@color/morado"
                    android:textSize="30dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_2"
                    android:textColor="@color/morado"
                    android:textSize="30dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_3"
                    android:textColor="@color/morado"
                    android:textSize="30dp"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="90">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_4"
                    android:textColor="@color/morado"
                    android:textSize="30dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_5"
                    android:textColor="@color/morado"
                    android:textSize="30dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_6"
                    android:textColor="@color/morado"
                    android:textSize="30dp"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="90">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_7"
                    android:textColor="@color/morado"
                    android:textSize="30dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_8"
                    android:textColor="@color/morado"
                    android:textSize="30dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_9"
                    android:textColor="@color/morado"
                    android:textSize="30dp" />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="90"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/selector_oval_button"
                    android:text="@string/_0"
                    android:textColor="@color/morado"
                    android:textSize="30dp"/>
            </RelativeLayout>



        </LinearLayout>
    </LinearLayout>




</LinearLayout>